[package]
name = "dynstr"
version = "0.1.1"
license = "MIT"
authors = ["Parsa Ghadimi <me@qti3e.com>"]
edition = "2018"
readme = "README.md"
keywords = ["string"]
categories = ["data-structures"]
description="A string implementation optimized for manipulations."
repository = "https://github.com/qti3e/dynstr/"
homepage = "https://github.com/qti3e/dynstr/"
documentation = "https://docs.rs/dynstr/0.1.1/dynstr/"

[badges]
github = { repository = "qti3e/dynstr" }
